Wed May 30 11:26:24 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/descriptors/Getter_Library.xml:
        * connectors/dds4ccm/tests/KeyedWriter/descriptors/KeyedWriter_Library.xml:
        * connectors/dds4ccm/tests/SLManyByMany/descriptors/SlMbM_Library.xml:
        * connectors/dds4ccm/tests/SLOneByOne/descriptors/SlObO_Library.xml:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/UnkeyedWriter_Library.xml:
          Fuzz: Added missing id-string.

Wed May 30 11:28:57 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged git branch DDS4CCM_QOS_Handler which adds support for
        configuring DDS4CCM QOS through xml files with OpenDDS

        commit 2196ead1f39f5ba8351ead32418d8b5318e4bb55
        Author: Marcel Smit <msmit@remedy.nl>
        Date:   Wed May 30 11:08:55 2012 +0200

                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/QOS_Common.h:
                  Corrected file name in file header.

                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/QOS_PubSub_T.cpp:
                  Removed unnecessary comment.

        commit 165994f23185cb70e969affe4efcee0f60ab0f14
        Author: Marcel Smit <msmit@remedy.nl>
        Date:   Wed May 30 10:44:56 2012 +0200

                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/ParticipantQos_Handler.cpp:
                  Added the parsing of user_data as comment

        commit 354e196184266f36f8097d848b779654b3417500
        Author: Marcel Smit <msmit@remedy.nl>
        Date:   Wed May 30 10:36:44 2012 +0200

                * CIAO/connectors/dds4ccm/tests/QoS/dump/qos_dump.cpp:
                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/ParticipantQos_Handler.cpp:
                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/ParticipantQos_Handler.h:
                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/QOS_XML_Loader.cpp:
                * CIAO/connectors/dds4ccm/tools/QOS_XML_Handler/XML_File_Intf.cpp: